# xallib

./: .clang-format  .gitignore  CLAUDE.md  LICENSE.txt  Makefile  README.md  README.rst  meson.build  meson_options.txt  notes.rst  sb.py
.github/workflows/: build_and_verify.yaml  build_install_verify.yaml
cijoe/: .gitignore
cijoe/configs/: cijoe-config.toml  localhost-loop.toml  localhost-nbd.toml  localhost-nvme.toml  localhost-zram.toml
cijoe/scripts/: prep_files.py  prep_loop.py  prep_nbd.py  prep_xfs.py  prep_zram.py  setup_files.py  setup_xfs.py  setup_zram.py
cijoe/tests/: get_extent_info.py  test_bmap.py  test_handle.py  test_index.py
cijoe/workflows/: prep_and_test.yaml  setup_nvme.yaml  setup_zram.yaml  test.yaml
docs/: memory-pools.md  xfs-internals.md
include/: libxal.h  libxal_util.h  xal.h  xal_be_fiemap.h  xal_be_fiemap_inotify.h  xal_be_xfs.h  xal_odf.h  xal_pool.h  xal_pp.h
src/: cli.c  pp.c  utils.c  xal.c  xal_be_fiemap.c  xal_be_fiemap_inotify.c  xal_be_xfs.c  xal_pool.c
toolbox/pkgs/: debian.sh  ubuntu.sh
tools/: meson.build  xal_bmap_mp_yaml.c
